--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-finance-manager-api",
   "version": "1.0.0",
-  "description": "This api is used to store your finance related data built using nodejs, expressjs.",
+  "description": "This api is used to store your finance related data built using nodejs, expressjs and mongodb.",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -12,9 +12,11 @@
   "author": "Gaurang Dhorda",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
