--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "personal-finance-manager-api",
   "version": "1.0.0",
   "description": "This api is used to store your finance related data built using nodejs, expressjs and mongodb.",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Gaurang Dhorda",
