--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cron": "^2.4.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.4.5"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
