--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
          "src": "/(.*)",
          "dest": "/"
      }
+    ],
+    "crons":[
+        {
+            "path":"/api/pfm",
+            "schedule":"00 34 14 26 * *"
+        }
     ]
  }
