changed verce.json path for cron job

--- a/vercel.json
+++ b/vercel.json
@@ -14,8 +14,8 @@
     ],
     "crons":[
         {
-            "path":"/",
-            "schedule":"00 48 14 26 * *"
+            "path":"/api/pfm",
+            "schedule":"58 14 26 * *"
         }
     ]
  }
