--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     "crons":[
         {
             "path":"/api/pfm",
-            "schedule":"58 14 26 * *"
+            "schedule":"* * * * *"
         }
     ]
  }
