Cron job at every 10 min

--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     "crons":[
         {
             "path":"/api/pfm",
-            "schedule":"* * * * * *"
+            "schedule":"*/10 * * * *"
         }
     ]
  }
