--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     "crons":[
         {
             "path":"/api/pfm",
-            "schedule":"*/10 * * * *"
+            "schedule":"07 11 26 * *"
         }
     ]
  }
