--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cron": "^2.4.1",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
